--- a/Source/CriticalPath.Web/Views/Account/Login.cshtml
+++ b/Source/CriticalPath.Web/Views/Account/Login.cshtml
@@ -17,7 +17,7 @@
                 <div class="form-group">
                     @Html.LabelFor(m => m.Email, new { @class = "col-sm-4 control-label" })
                     <div class="col-sm-8">
-                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control", @autofocus = "autofocus" })
                         @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
                     </div>
                 </div>
