--- a/Source/CriticalPath.Web/Views/Suppliers/Index.cshtml
+++ b/Source/CriticalPath.Web/Views/Suppliers/Index.cshtml
@@ -19,8 +19,8 @@
         @Html.Partial("_SearchBoxPartial")
     </div>
 </div>
-<div id="mainGrid" class="ag-style ag-basic" style="width:948px;height:612px;"></div>
-<div class="row pl15" style="margin-top:-72px;z-index:500;position:absolute;">
+<div id="mainGrid" class="ag-style ag-basic" style="width:100%;height:600px;"></div>
+<div class="row pl15" style="margin-top:-64px;z-index:500;position:absolute;">
     <nav><ul id="pagerUl" class="pagination"></ul></nav>
 </div>
 @Html.Partial("_MessageBoxPartial")
